Added comments in all cells

--- a/EVA8_Session_1.ipynb
+++ b/EVA8_Session_1.ipynb
@@ -92,7 +92,7 @@
         "id": "DqTWLaM5GHgH"
       },
       "source": [
-        "\n",
+        "# Loading MNIST training and test dataset using torch utils DataLoader\n",
         "\n",
         "torch.manual_seed(1)\n",
         "batch_size = 128\n",
@@ -121,6 +121,7 @@
         "id": "8fDefDhaFlwH"
       },
       "source": [
+        "# Training and Evaluating the model build using the training and test dataset loaded in earlier cell\n",
         "from tqdm import tqdm\n",
         "def train(model, device, train_loader, optimizer, epoch):\n",
         "    model.train()\n",
@@ -162,7 +163,7 @@
         "id": "MMWbLWO6FuHb"
       },
       "source": [
-        "\n",
+        "# Actual training and evaluting for 1 epoch\n",
         "model = Net().to(device)\n",
         "optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
         "\n",
