--- a/EVA8_Session_1.ipynb
+++ b/EVA8_Session_1.ipynb
@@ -46,6 +46,7 @@
       },
       "source": [
         "# Building Main CNN Neural Network Model using torch nn library\n",
+        "# using log_softmax for last layer\n",
         "class Net(nn.Module):\n",
         "    def __init__(self):\n",
         "        super(Net, self).__init__()\n",
@@ -63,7 +64,7 @@
         "        x = self.pool1(F.relu(self.conv2(F.relu(self.conv1(x))))) # Building 1st block with relu activations\n",
         "        x = self.pool2(F.relu(self.conv4(F.relu(self.conv3(x))))) # Building 2nd block with relu activations\n",
         "        x = F.relu(self.conv6(F.relu(self.conv5(x))))             # Building 3rd block with relu activations \n",
-        "        x = F.relu(self.conv7(x))                                 # Output Layer giving with 10 output neurons\n",
+        "        x = self.conv7(x)                                         # Output Layer giving with 10 output neurons\n",
         "        x = x.view(-1, 10)                                        # Reshaping 1x1x10 to 10\n",
         "        return F.log_softmax(x)                                   # Applies a softmax followed by a logarithm.While mathematically equivalent to log(softmax(x)), doing these two operations separately is slower and numerically unstable. This function uses an alternative formulation to compute the output and gradient correctly."
       ],
@@ -93,7 +94,7 @@
       },
       "source": [
         "# Loading MNIST training and test dataset using torch utils DataLoader\n",
-        "\n",
+        "# Normalizing train and test dataset with 0.1307 mean and 0.3081 std calculated on whole dataset\n",
         "torch.manual_seed(1)\n",
         "batch_size = 128\n",
         "\n",
@@ -122,6 +123,7 @@
       },
       "source": [
         "# Training and Evaluating the model build using the training and test dataset loaded in earlier cell\n",
+        "# The negative log likelihood loss. It is useful to train a classification problem, here 10 digits in MNIST\n",
         "from tqdm import tqdm\n",
         "def train(model, device, train_loader, optimizer, epoch):\n",
         "    model.train()\n",
